<resources>
    <string name="app_name">Smart Patient</string>
    <string name="fragment_add_medicine_label">Add a new medicine</string>
    <string name="fragment_update_medicine_label">Update medicine for</string>
    <string name="fragment_medicine_list_label">Medicines List</string>
    <string name="fragment_home_label">Home</string>
    <string name="fragment_settings_label">Settings</string>
    <string name="fragment_login_label">Login</string>
    <string name="fragment_register_label">Register</string>
    <string name="fragment_appointment_list_label">Appointment List</string>
    <string name="fragment_chat_list_label">Chat list</string>
    <string name="fragment_new_appointment_label">New Appointment</string>
    <string name="fragment_chat_detail_label">Chat Detail</string>
    <string name="fragment_profile_label">Profile</string>
    <string name="home_extendedFAB_text">Add a new medicine</string>
    <string name="edtTxtMedName_hint">Medicine Name </string>
    <string name="tvMedType_text">Medicine Type : </string>
    <string name="spinnerMedTypeNoSelection_text">Please select the medicine type from the dropdown!</string>
    <string name="btnSetReminderTime_text">Set Reminder Time</string>
    <string name="btnSetExpiryDate_text">Set Expiry Date</string>
    <string name="edtTxtDailyIntake_hint">Daily intake</string>
    <string name="edtTxtPrescribedBy_hint">Prescribed by</string>
    <string name="edtTxtMedicineNotes_hint">Enter important info about this medicine if any</string>
    <string name="btnAddMedImg_text">Capture Medicine Image</string>
    <string name="btnAdd_text">Add</string>
    <string name="btnUpdate_text">Update</string>
    <string name="btnCancel_text">Cancel</string>
    <string name="saveImgSuccess_text">Image of Reminder is stored successfully</string>
    <string name="writePermissionRequired_text">Your permission is required to capture and store any image</string>
    <string name="reminderUpdateSuccess_text">The current reminder has been updated successfully!</string>
    <string name="reminderInsertSuccess_text">Reminders have been scheduled successfully!</string>
    <string name="menu_action_edit">Edit</string>
    <string name="menu_action_delete">Delete</string>
    <string name="menu_action_title">%1$d item%2$s selected</string>
    <string name="tvTimeToRemind_placeholder_text">%1$d:%2$d %3$s</string>
    <string name="tvMedName_placeholder_text">%1$s (%2$d times a day)</string>
    <string name="from_main_to_addUpdate">shared_element_transition_1</string>
    <string name="key_night_mode">key_night_mode</string>
    <string name="key_reminder_tone">key_reminder_tone</string>
    <string name="key_about_dev">key_about_dev</string>
    <string name="title_night_mode">Night mode</string>
    <string name="title_ringtone">Select reminder sound</string>
    <string name="title_about_dev">About the dev</string>
    <string name="summary_night_mode_on">On</string>
    <string name="summary_night_mode_off">Off</string>
    <string name="summary_about_dev">Developed by Fantastic-4 as 7th semester project</string>
    <string-array name="spinner_med_type_array_res">
        <item>Choose One</item>
        <item>Pill</item>
        <item>Oral Suspension</item>
        <item>Injection</item>
    </string-array>
    <string-array name="reminder_type_array_res">
        <item name="tab_text_1">Pending</item>
        <item name="tab_text_2">Completed</item>
        <item name="tab_text_3">Missed</item>
    </string-array>
    <string name="chip_group_title">Suggestions</string>
    <string name="btnStopAlarm_text">Stop Reminder</string>
    <string name="btnSetAlarmSixHoursLater_text">Remind again 6 hrs later</string>
    <string name="btnSetAlarmCustomHoursLater_text">Remind again custom time later</string>
    <string name="notif_channel_id">SP_Channel_ID</string>
    <string name="notif_channel_name">Smart Patient</string>
    <string name="notif_channel_desc">This notification channel is used to notify the user about the missed reminders.</string>
    <string name="notif_missed_title">Reminder Missed!!</string>
    <string name="notif_content">A reminder to take medicine set for %1$s is missed.</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="btnOffline_txt">Switch to Offline Mode</string>
    <string name="welcome">"Welcome!"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title_text">Welcome! Let\'s get you started!</string>
    <string name="register_text">Don\'t have an account? Register here</string>
    <string name="btnSettings_txt">Configure app\'s settings</string>
    <string name="invalid_name">Not a valid name</string>
    <string name="invalid_address">Not a valid address</string>
    <string name="invalid_age">Not a valid age</string>
    <string name="invalid_qualification">Do not leave this field empty</string>
    <string name="invalid_nmc">Enter valid NMC number</string>
    <string name="invalid_speciality">Do not leave this field empty</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="invalid_phone">Phone number must be of 10 digits</string>
    <string name="invalid_gender">A gender must be selected</string>
    <string name="hint_name">Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_age">Age</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_nmc">NMC number</string>
    <string name="hint_qualification">Qualification</string>
    <string name="hint_speciality">Speciality(Area of Expertise)</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_others">Others</string>
    <string name="register_patients">Register as Patient</string>
    <string name="register_hp">Register as Health Personnel</string>
    <string name="login_acc_already">Already have an account? Login here</string>
    <string name="register_title">Your new account is just a single step away!</string>
    <string name="iv_cont_desc_logo">It is logo of this application.</string>
    <string name="registration_ok">Registration is successful, please check your email for verification link and login</string>
    <string name="registration_failed">Registration failed, please try again later</string>
    <string name="hint_appointment_name">Enter appointment name</string>
    <string name="hint_doctor_name">Enter doctor/health personnel name</string>
    <string name="btnSetAppointmentTime_Text">Set Appointment Time</string>
    <string-array name="users">
        <item>Patient</item>
        <item>Health Personnel</item>
    </string-array>
    <plurals name="reminder_hr">
        <item quantity="one">%d hr</item>
        <item quantity="many">%d hrs</item>
    </plurals>
    <plurals name="reminder_min">
        <item quantity="one">%d min</item>
        <item quantity="many">%d mins</item>
    </plurals>
    <plurals name="med_entry_deletion_text">
        <item quantity="one">A medicine entry has been deleted!</item>
        <item quantity="other">Selected medicine entries have been deleted!</item>
    </plurals>
    <string name="cont_desc_btn_send">Send this message.</string>
    <string name="cont_desc_btn_convo_add">Start new conversation.</string>
    <string name="cont_desc_btn_app_add">Take a new appointment.</string>
    <string name="tvWithPerson_txt">Health Personnel :</string>
    <string name="insertAppointmentSuccess_txt">Appointment has been requested successfully</string>
    <string name="rvHpList_label_txt">Available Health Personnel</string>
    <string name="rvPList_label_txt">Connected Patient List</string>
    <string name="tv_no_patient_txt">You are not connected with any patient</string>
    <string name="tv_no_hp_txt">There are not any health personnel available</string>
    <string name="rvAppList_label_txt">My Appointments</string>
    <string name="tv_no_app_txt">There are no appointments scheduled for you. If you are a patient,
        try taking an appointment by clicking the respective health personnel card and if you are not,
        there is nothing you can do about it xD</string>
    <string name="menuLogOut_title">Logout</string>
    <string name="logOut_success">You have been logged out!</string>
    <string name="dialog_logout_msg">Are you sure you want to log out?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="send_email_title">Send email</string>
    <string name="til_availability_hint">10:00 am to 11:00 am</string>
    <string name="pic_upload">Uploading your profile picture</string>
    <string name="pic_upload_successful">Profile picture upload completed successfully</string>
    <string name="pic_upload_failed">Profile picture upload failed! Please try again!</string>
    <string name="avail_update_successful">Availability status updated successfully</string>
    <string name="avail_update_failed">Availability status update failed! Please try again!</string>
    <string name="user_fetch_error">Error fetching user\'s data! Please press button and try again later!</string>
    <string name="tv_pp_info_txt">Click the picture above to update your profile picture.</string>
    <string name="fabOptions_txt">Options</string>
    <string name="fabOptions_txt_alt">Close</string>
    <string name="fabPhone_txt">Call</string>
    <string name="fabEmail_txt">Email</string>
    <string name="btnNewApp_txt">New Appointment</string>
    <string name="btn_approve_txt">Approve</string>
    <string name="btn_reject_txt">Reject</string>
    <string name="approval_update_successful">Appointment\'s approval status updated successfully</string>
    <string name="approval_update_failed">Appointment\'s approval status update failed</string>
    <string name="chip_add_alarm_time_txt">Add alarm time</string>
    <string name="tv_alarm_time_picker_title">Select alarm time/s</string>
    <string name="tv_medicines_list_txt_hp">Medicines prescribed by you</string>
    <string name="tv_medicines_list_txt_p">Medicines prescribed for you</string>
    <string name="tv_no_medicines_txt">There are no medicines prescribed for/by you currently.
        If you are a health personnel, click the patient from the list above to start prescribing medicines
        and if you are not, there is nothing you can do about it xD</string>
    <string name="tv_reminders_label_txt">Reminder/s for this medicine</string>
    <string name="deletionSuccess_txt">This medicine entry along with it\'s reminders have been deleted</string>
    <string name="tvChatIdList_txt">My chats</string>
    <string name="tvAvailableList_txt_p">Available Health Personnel</string>
    <string name="tvAvailableList_txt_hp">Available Patients</string>
    <string name="tv_no_chat_id_txt">There are not any messages. Click on the available list above to start your first conversation.</string>
    <string name="tv_no_msg_txt">Start your fresh conversation by sending a new message below.</string>
</resources>