<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.gbsoft.smartpatient.ui.main.register.HealthPersonnelRegVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.main.register.HealthPersonnelRegisterFrag">

        <TextView
            android:id="@+id/tv_acc_already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:setSpannableText="@{false}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register_hp"
            tools:text="@string/login_acc_already" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register_hp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:enabled="@{vm.isDataValid()}"
            android:onClick="@{() -> vm.onBtnRegisterClick()}"
            android:text="@string/register_hp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_gender" />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checkedButton="@={vm.checkedGenderRdoBtnId}"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/til_register_pass"
            app:layout_constraintStart_toStartOf="@id/til_register_pass"
            app:layout_constraintTop_toBottomOf="@id/til_register_pass">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rdo_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rdo_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rdo_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_others" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:errorText="@{vm.nameError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:text="@={vm.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_qualification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorText="@{vm.qualificationError}"
            app:layout_constraintEnd_toEndOf="@+id/til_name"
            app:layout_constraintStart_toStartOf="@id/til_name"
            app:layout_constraintTop_toBottomOf="@id/til_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_qualification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_qualification"
                android:inputType="textShortMessage"
                android:text="@={vm.qualification}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_nmc"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorText="@{vm.nmcError}"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/til_qualification"
            app:layout_constraintTop_toBottomOf="@id/til_qualification">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_nmc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nmc"
                android:inputType="textEmailAddress"
                android:text="@={vm.nmc}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_speciality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:errorText="@{vm.specialityError}"
            app:layout_constraintEnd_toEndOf="@+id/til_qualification"
            app:layout_constraintStart_toEndOf="@id/til_nmc"
            app:layout_constraintTop_toBottomOf="@id/til_qualification">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_speciality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_speciality"
                android:inputType="textEmailAddress"
                android:text="@={vm.speciality}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorText="@{vm.phoneError}"
            app:layout_constraintEnd_toEndOf="@id/til_speciality"
            app:layout_constraintStart_toStartOf="@id/til_nmc"
            app:layout_constraintTop_toBottomOf="@id/til_nmc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="text|phone"
                android:text="@={vm.phone}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorText="@{vm.emailError}"
            app:layout_constraintEnd_toEndOf="@id/til_phone"
            app:layout_constraintStart_toStartOf="@id/til_phone"
            app:layout_constraintTop_toBottomOf="@id/til_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:text="@={vm.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle"
            app:errorText="@{vm.passwordError}"
            app:layout_constraintEnd_toEndOf="@id/til_register_email"
            app:layout_constraintStart_toStartOf="@id/til_register_email"
            app:layout_constraintTop_toBottomOf="@id/til_register_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_register_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:text="@={vm.password}" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>