<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_alarm_picker_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/dialog_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/date_range_picker"
            app:layout_constraintStart_toStartOf="@+id/date_range_picker"
            app:layout_constraintTop_toBottomOf="@+id/chip_group_time"
            app:layout_constraintVertical_bias="0.0" />

        <com.archit.calendardaterangepicker.customviews.DateRangeCalendarView
            android:id="@+id/date_range_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_alarm_time_picker_title" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/date_range_picker"
            app:layout_constraintStart_toStartOf="@+id/date_range_picker"
            app:layout_constraintTop_toBottomOf="@+id/date_range_picker"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_add_alarm_time_txt"
                app:chipIcon="@drawable/fab_add"
                app:chipIconTint="?colorOnSurface"
                app:closeIconVisible="false" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tv_alarm_time_picker_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_alarm_time_picker_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>